Add header navigation with Age Today, Specific Date, and Find DOB options

--- a/04-age-calculator/index.html
+++ b/04-age-calculator/index.html
@@ -10,6 +10,21 @@
 </head>
 
 <body>
+
+    <header>
+        <nav>
+            <div>
+                <i class="fa-solid fa-cake-candles"></i> <br> Age Today
+            </div>
+            <div>
+                <i class="fa-regular fa-calendar-days"></i> <br> Specific Date
+            </div>
+            <div>
+                <i class="fa-solid fa-gift"></i> <br> Find DOB
+            </div>
+        </nav>
+    </header>
+
     <script src="script.js"></script>
 </body>
 
