Update age calculator UI: Add styling and structural improvements

--- a/04-age-calculator/index.html
+++ b/04-age-calculator/index.html
@@ -13,14 +13,14 @@
 
     <header>
         <nav>
-            <div>
-                <i class="fa-solid fa-cake-candles"></i> <br> Age Today
+            <div style="background-color: white;">
+                <i class="fa-solid fa-cake-candles"></i> Age Today
             </div>
             <div>
-                <i class="fa-regular fa-calendar-days"></i> <br> Specific Date
+                <i class="fa-regular fa-calendar-days"></i> Specific Date
             </div>
             <div>
-                <i class="fa-solid fa-gift"></i> <br> Find DOB
+                <i class="fa-solid fa-gift"></i> Find DOB
             </div>
         </nav>
     </header>
