Add age calculation functionality

--- a/04-age-calculator/index.html
+++ b/04-age-calculator/index.html
@@ -30,7 +30,7 @@
         <main>
             <div>
                 <span>Date of Birth</span>
-                <input type="date" id="" />
+                <input type="date" id="date" value="2011-08-04" />
             </div>
             <div>
                 <button>Calculate</button>
