Add millisecond-level age calculations

--- a/04-age-calculator/index.html
+++ b/04-age-calculator/index.html
@@ -55,6 +55,18 @@
                     <span>0000</span>
                     <span>Total Hours</span>
                 </div>
+                <div>
+                    <span>0000</span>
+                    <span>Total Minutes</span>
+                </div>
+                <div>
+                    <span>0000</span>
+                    <span>Total Seconds</span>
+                </div>
+                <div>
+                    <span>0000</span>
+                    <span>Total Milliseconds</span>
+                </div>
             </div>
             <hr />
             <div>
